manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thumbnails
  labels:
    app: thumbnails
spec:
  type: NodePort
  selector:
    app: thumbnails
    tier: web
  ports:
  - port: 80
    targetPort: 80
